# hogercas

./: .gitignore  CMakeLists.txt
include/: colors.hpp  commands.hpp  constant_fusion.hpp  constant_yeeting_visitor.hpp  derivative_visitor.hpp  deserializer.hpp  equation_solver.hpp  evaluator_visitor.hpp  expansion_visitor.hpp  expression_compare.hpp  flatten.hpp  memory.hpp  notebook.hpp  numerical_evaluator_visitor.hpp  operations.hpp  parser.hpp  replace.hpp  serializer_visitor.hpp  simplifier_visitor.hpp  tokenizer.hpp  traverse.hpp  treeify.hpp  visitor_base.hpp
src/: commands.cpp  constant_fusion.cpp  constant_yeeting_visitor.cpp  derivative_visitor.cpp  deserializer.cpp  equation_solver.cpp  evaluator_visitor.cpp  expansion_visitor.cpp  expression_compare.cpp  flatten.cpp  main.cpp  memory.cpp  notebook.cpp  numerical_evaluator_visitor.cpp  replace.cpp  serializer_visitor.cpp  simplifier_visitor.cpp  tokenizer.cpp  treeify.cpp
tester/: tester.cpp  tests.tests
